--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,16 +1,14 @@
-
-<h1>Please sign in.</h1>
-
 <form method="GET" action='/'>
+  <label for="user_id">User ID: </label>&nbsp
+  <input type="user_id" name="user_id" id="user_id" />
   <label for="user_email">Email Address: </label>&nbsp
   <input type="email" name="user_email" id="user_email" />
   </br>
   <label for="user_password">Password: </label>&nbsp
   <input type="password" name="user_password" id="user_password" />
   </br>
+  <label for="profile_pic_url">profile pic url: </label>&nbsp
+  <input type="profile_pic_url" name="profile_pic_url" id="profile_pic_url" />
+</br>
   <input type="submit" value="submit" name="submit" />
 </form>
-</br>
-<p>You can also sign in using your google account.</p></br>
-
-<p>If you don’t have an account <a href="/sign_up">sign up</a>here.</p>
