--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,14 @@
 
 <h1>Please sign in.</h1>
 
-<form method="GET" action='/'>
+<form method="POST" action="/">
   <label for="user_email">Email Address: </label>&nbsp
   <input type="email" name="user_email" id="user_email" />
   </br>
   <label for="user_password">Password: </label>&nbsp
   <input type="password" name="user_password" id="user_password" />
   </br>
-  <input type="submit" value="submit" name="submit" />
+  <input type="submit" name="submit" value="submit" />
 </form>
 </br>
 <p>You can also sign in using your google account.</p></br>
