--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,3 +1,5 @@
+<h2>Sign up for free a Critique-It! account</h2>
+
 <form method="GET" action='/'>
   <label for="user_id">User ID: </label>&nbsp
   <input type="user_id" name="user_id" id="user_id" />
