--- a/views/index.erb
+++ b/views/index.erb
@@ -11,6 +11,7 @@
   <input type="submit" name="submit" value="submit" />
 </form>
 </br>
-<p>You can also sign in using your google account.</p></br>
-
+<p>You can also sign in using your <a href="<%= @url %>" >google account.</a>
+</p>
+</br>
 <p>If you don’t have an account <a href="/sign_up">sign up</a>here.</p>
