wrote two tests for sign_in_spec

--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -14,3 +14,5 @@
 </br>
   <input type="submit" value="submit" name="submit" />
 </form>
+
+<p> "Your user id is: <%= @user %> and your password is <%= @password %>. Please <a href="/">sign in</a>." </p>
