--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,6 +1,11 @@
+
 <h2>Sign up for free a Critique-It! account</h2>
 
-<form method="GET" action='/'>
+<% if @sign_up_success_message %>
+  <p class="sign_up_success_message">Your user id is: <%= @user %> and your password is <%= @password %>. Please <a href="/">sign in</a>. </p>
+
+<% else %>
+<form method="POST" action='/sign_up'>
   <label for="user_id">User ID: </label>&nbsp
   <input type="user_id" name="user_id" id="user_id" />
   <label for="user_email">Email Address: </label>&nbsp
@@ -15,4 +20,7 @@
   <input type="submit" value="submit" name="submit" />
 </form>
 
-<p> "Your user id is: <%= @user %> and your password is <%= @password %>. Please <a href="/">sign in</a>." </p>
+
+
+
+<% end %>
