user ids from google

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,5 @@
 <h1>Welcome to Critique-It!</h1>
+
+
+<p>Make a new <a href="/posts/new" >post</a></p>
+<p>Connect to you <a href="/feed/<% @user %>" >feed</a></p>
