--- a/views/new_post_form.erb
+++ b/views/new_post_form.erb
@@ -1,9 +1,9 @@
 <h2>Post a new image for critique</h2>
 
   <form id="post_new_image" method="POST" action="/posts">
-    <label>User ID: </label>
+    <!-- <label>User ID: </label>
         <input type="text" id="user_id" name="user_id" />
-        <br/><br/>
+        <br/><br/> -->
     <label>Title: </label>
       <input type="text" id="img_title" name="img_title" />
       <br/><br/>
