--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 
-<h1>Please sign in.</h1>
+<h1>Please sign in using your <a href="<%= @url %>">google account</a>.</h1>
 
-<form method="POST" action="/">
+<!-- <form method="POST" action="/">
   <label for="user_email">Email Address: </label>&nbsp
   <input type="email" name="user_email" id="user_email" />
   </br>
@@ -11,6 +11,6 @@
   <input type="submit" name="submit" value="submit" />
 </form>
 </br>
-<p>You can also sign in using your <a href="<%= @url %>">google account</a>.</p>
-</br>
-<p>If you don’t have an account <a href="/sign_up">sign up</a> here.</p>
+<p>You c --><!-- an also sign in using your <a href="<%= @url %>">google account</a>.</p>
+</br> -->
+<!-- <p>If you don’t have an account <a href="/sign_up">sign up</a> here.</p> -->
