user story 2 done

--- a/views/each_post.erb
+++ b/views/each_post.erb
@@ -6,6 +6,8 @@
       </br>
       <p>Image: <a href="<%= @selected_post["url"] %>"><img src="<%= @selected_post["url"] %>" width="600px" /></a></p>
       </br>
+      <p>Description: <%= @selected_post["description"] %></p>
+      </br>
 
 
 
