--- a/views/home.erb
+++ b/views/home.erb
@@ -2,4 +2,5 @@
 
 
 <p>Make a new <a href="/posts/new" >post</a></p>
+<p>View your <a href="/posts/<%= @user %>" >posts</a>.</p>
 <p>Connect to you <a href="/feed/<%= @user %>" >feed</a></p>
