update mostly working, redirect is not

--- a/views/each_post.erb
+++ b/views/each_post.erb
@@ -9,7 +9,7 @@
       <p>Description: <%= @selected_post["description"] %></p>
       </br>
 
-      <a href="/each_post/<% @selected_post %>">Edit</a>
+      <a href="/edit_post/<%= @id %>">Edit</a>
       </br>
 
 
