--- a/views/new_post_form.erb
+++ b/views/new_post_form.erb
@@ -18,7 +18,7 @@
       <input type="text" id="img_url" name="img_url" />
       <br/><br/>
     <label>Description:</label>
-      <input type="text" id="img_description" name="img_description" rows="4" cols="50" />
+      <input type="text" id="img_description" name="img_description" />
       <br/><br/>
     <img src="img_url">
   </br></br>
