--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>project_one_app</title>
+    <title>Critique-It!</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+    <header>
+      <h1>Critique-It!</h1>
+    </header>
+    </br>
     <%= yield %>
   </body>
 </html>
