--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,3 +2,15 @@ h1 {
   font-family: 'Cinzel', serif;
   font-size: 50px;
 }
+
+body {
+  background-color: #CCCCCC;
+
+}
+
+p {
+  font-family: font-family: 'Josefin Slab', serif;
+  font-size: 30px;
+
+
+}
