--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Cinzel:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css'>
     <!-- <link href="/stylesheets/normalize.css" rel="stylesheet" type="text/css" media="all"> -->
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
