p text font, background

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,11 @@
 h1 {
   font-family: 'Cinzel', serif;
-  font-size: 50px;
+  font-size: 40px;
 }
 
+h2 {
+  font-size:
+}
 body {
   background-color: #CCCCCC;
 
@@ -10,7 +13,7 @@ body {
 
 p {
   font-family: font-family: 'Josefin Slab', serif;
-  font-size: 30px;
+  font-size: 15px;
 
 
 }
