--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,11 @@
 h1 {
   font-family: 'Cinzel', serif;
-  font-size: 40px;
+  font-size: 45px;
 }
 
 h2 {
   font-size: 25px;
+  text-align: center;
 }
 body {
   background-color: #CCCCCC;
@@ -21,4 +22,11 @@ header {
   width: 100%;
   text-align: left;
   margin-top: -35px;
+}
+img {
+  border-radius: 10px;
+  border-color: white;
+}
+.posts {
+
 }
