--- a/views/each_post.erb
+++ b/views/each_post.erb
@@ -4,7 +4,7 @@
       </br>
       <p>Category: <%= @selected_post["category"].capitalize %></p>
       </br>
-      <p>Image: <a href="<%= @selected_post["url"] %>"><img src="<%= @selected_post["url"] %>" width="600px" /></a></p>
+      <p>Image: <center><a href="<%= @selected_post["url"] %>"><img src="<%= @selected_post["url"] %>" width="600px" /></a></center></p>
       </br>
       <p>Description: <%= @selected_post["description"] %></p>
       </br>
