--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,13 +9,12 @@ h2 {
 }
 body {
   background-color: #CCCCCC;
-  font-color: white;
 
 }
 
 p {
   font-size: 15px;
-
+  color: white;
 }
 
 header {
