--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,6 +18,7 @@
     <header>
     </br>
     </br>
+    &nbsp&nbsp&nbsp
       <h1>Critique-It!</h1>
     <br/>
     <br/>
@@ -27,7 +28,5 @@
 
     <%= yield %>
   </body>
-  <footer>
-    <a href="/home/:id">Home</a>
-  </footer>
+
 </html>
