--- a/views/posts.erb
+++ b/views/posts.erb
@@ -20,8 +20,8 @@
       </div>
       </a>
     <% end %>
-
-
-
-
 </ol>
+
+<footer>
+    <center><a href="/home/:id">Home</a></center>
+  </footer>
