edit submit button

--- a/views/edit_post_form.erb
+++ b/views/edit_post_form.erb
@@ -23,6 +23,6 @@
     <img src="<%= @post_to_edit["url"] %>" width="500px" />
   </br></br>
     <input type="hidden" name="_method" value="PUT">
-    <input type="submit" value="Edit Post">
+    <input type="submit" value="Submit">
   </form>
 
