--- a/views/each_post.erb
+++ b/views/each_post.erb
@@ -1,8 +1,10 @@
 
-      <p>Image: <center><a href="<%= @selected_post["url"] %>"><img src="<%= @selected_post["url"] %>" width="600px" /></a></center></p>
+
+      <center><h3>Title: <%= @selected_post["title"].capitalize %></h3></center>
+    </br>
+      <center><a href="<%= @selected_post["url"] %>"><img src="<%= @selected_post["url"] %>" width="600px" /></a></center>
       </br>
       </br>
-      <p>Title: <%= @selected_post["title"].capitalize %></p>
       <p>Category: <%= @selected_post["category"].capitalize %></p>
       <p>Description: <%= @selected_post["description"] %></p>
       </br>
