--- a/views/each_post.erb
+++ b/views/each_post.erb
@@ -1,6 +1,6 @@
 
 
-      <center><h3>Title: <%= @selected_post["title"].capitalize %></h3></center>
+      <center><h2 color="black">Title: <%= @selected_post["title"].capitalize %></h2></center>
     </br>
       <center><a href="<%= @selected_post["url"] %>"><img src="<%= @selected_post["url"] %>" width="600px" /></a></center>
     </br>
