--- a/views/posts.erb
+++ b/views/posts.erb
@@ -23,5 +23,7 @@
 </ol>
 
 <footer>
-    <center><a href="/home/:id">Home</a></center>
-  </footer>
+    <form action="/home/:id" method="GET">
+        <input type="submit" value="Go to your Critique-It! Homepage">
+    </form>
+</footer>
