--- a/views/posts.erb
+++ b/views/posts.erb
@@ -23,7 +23,9 @@
 </ol>
 
 <footer>
-    <form action="/home/:id" method="GET">
+    <center>
+      <form action="/home/:id" method="GET">
         <input type="submit" value="Go to your Critique-It! Homepage">
-    </form>
+      </form>
+    </center>
 </footer>
