--- a/views/posts.erb
+++ b/views/posts.erb
@@ -12,7 +12,7 @@
           </br>
           <p>Category: <%= post["category"].capitalize %></p>
           </br>
-          <p>Image: <a href="<%= post["url"] %>"><img src="<%= post["url"] %>" width="300px" /></a></p>
+          <a href="<%= post["url"] %>"><img src="<%= post["url"] %>" width="300px" /></a>
           </br>
           <p>Description: <%= post["description"] %></p>
           </br>
