--- a/views/each_post.erb
+++ b/views/each_post.erb
@@ -22,4 +22,12 @@
     </br>
     </br>
 
-
+  <footer>
+    <center>
+      <form action="/home/:id" method="GET">
+        <input type="submit" value="Go to your Critique-It! Homepage">
+      </form>
+    </br>
+    </br>
+    </center>
+  </footer>
