--- a/views/feed.erb
+++ b/views/feed.erb
@@ -7,15 +7,23 @@
       %>
       <a href="/each_post/<%= "#{user}" %><%= "#{pic_id}" %>" >
           <li>
-              <p>Title: <%= post["title"].capitalize %></p>
-              </br>
-              <p>Category: <%= post["category"].capitalize %></p>
-              </br>
               <a href="<%= post["url"] %>"><img src="<%= post["url"] %>" width="300px" ></a>
               </br>
+              <p>Title: <%= post["title"].capitalize %></p>
+              <p>Category: <%= post["category"].capitalize %></p>
               <p>Description: <%= post["description"] %></p>
               </br>
           </li>
       </a>
     <% end %>
 </ol>
+
+<footer>
+    <center>
+      <form action="/home/:id" method="GET">
+        <input type="submit" value="Go to your Critique-It! Homepage">
+      </form>
+    </br>
+    </br>
+    </center>
+</footer>
