--- a/views/feed.erb
+++ b/views/feed.erb
@@ -7,7 +7,7 @@
       %>
       <a href="/each_post/<%= "#{user}" %><%= "#{pic_id}" %>" >
           <li>
-              <a href="<%= post["url"] %>"><img src="<%= post["url"] %>" width="300px" ></a>
+              <img src="<%= post["url"] %>" width="300px" >
               </br>
               <p>Title: <%= post["title"].capitalize %></p>
               <p>Category: <%= post["category"].capitalize %></p>
