--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 h1 {
   font-family: 'Cinzel', serif;
-  font-size: 48px;
-  padding-left: 2.5cm;
+  font-size: 50px;
 }
 
 h2 {
@@ -23,7 +22,7 @@ p {
 
 header {
   background-color: #5F5FBF;
-  width: 110%;
+  width: 100%;
   text-align: left;
   margin-top: -25px;
 }
@@ -35,6 +34,7 @@ img {
 }
 
 form {
+  vertical-align: left;
 
 }
 
