--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 h1 {
   font-family: 'Cinzel', serif;
   font-size: 50px;
+  padding-left: 2.5cm;
 }
 
 h2 {
@@ -30,7 +31,7 @@ img {
   border-radius: 20px;
   border-color: white;
   border-width: 10px;
-  box-shadow: 5px #fff;
+  box-shadow: 5px 5px 5px 5px #fff;
 }
 
 form {
