--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ img {
   border-radius: 20px;
   border-color: white;
   border-width: 10px;
-  box-shadow: 5px 5px 5px 5px #fff;
+  box-shadow: 1px 1px 5px #fff;
 }
 
 form {
