--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 
 </br>
 </br>
-<h2>Please sign in using your <a href="<%= @url %>">google account</a>.</h2>
+<h2>Please sign in using your <a href="<%= @url %>">google account</a></h2>
 
 <!-- <form method="POST" action="/">
   <label for="user_email">Email Address: </label>&nbsp
