--- a/views/posts.erb
+++ b/views/posts.erb
@@ -5,7 +5,7 @@
       user = @user
       pic_id = index
       %>
-
+        <center>
         <div id="posts">
         <li>
           <a href="/each_post/<%= "#{user}" %><%= "#{pic_id}" %>" >
@@ -20,6 +20,7 @@
       </br>
       </br>
       </div>
+    </center>
     <% end %>
 </ol>
 
