--- a/views/feed/index.erb
+++ b/views/feed/index.erb
@@ -21,7 +21,8 @@
 
 <footer>
     <center>
-      <form action="/home/:id" method="GET">
+      <% user = @user %>
+      <form action="/home/<%= "#{user}" %>" method="GET">
         <input type="submit" value="Go to your Critique-It! Homepage">
       </form>
     </br>
