--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,6 @@
 
 
 
-<h2>Make a new <a href="/posts/new" >post</a></h2>
+<h2>Make a new <a href="/posts/new/" >post</a></h2>
 <h2>View your <a href="/posts/<%= @user %>" >posts</a></h2>
 <h2>Connect to you <a href="/feed/<%= @user %>" >feed</a></h2>
