--- a/views/posts/new.erb
+++ b/views/posts/new.erb
@@ -24,3 +24,14 @@
   </br></br>
     <input type="submit" name="submit" id="submit">
   </form>
+
+<footer>
+    <center>
+      <% user = @user %>
+      <form action="/home/<%= "#{user}" %>" method="GET">
+        <input type="submit" value="Go to your Critique-It! Homepage">
+      </form>
+    </br>
+    </br>
+    </center>
+  </footer>
