--- a/views/posts/show.erb
+++ b/views/posts/show.erb
@@ -24,7 +24,8 @@
 
   <footer>
     <center>
-      <form action="/home/:id" method="GET">
+      <% user = @user %>
+      <form action="/home/<%= "#{user}" %>" method="GET">
         <input type="submit" value="Go to your Critique-It! Homepage">
       </form>
     </br>
